# file_ripper

./: Cargo.toml  README.md
src/: main.rs
